etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_iceberg_s3_secret_access_key_env_var_json.snap
---
source: etl-api/src/k8s/http.rs
expression: iceberg_s3_secret_access_key_env_var_json
---
{
  "name": "APP_DESTINATION__ICEBERG__SUPABASE__S3_SECRET_ACCESS_KEY",
  "valueFrom": {
    "secretKeyRef": {
      "key": "s3-secret-access-key",
      "name": "abcdefghijklmnopqrst-42-iceberg"
    }
  }
}
